--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+logging.level.org.springframework=debug
+spring.profiles.active=dev
+
+
+currency-service.url=http://default.in28minutes.com
+currency-service.username=defaultname
+currency-service.key=defaultkey
+
+
 
